Adding responsive layouts

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   </head>
   <body>
     <div id="confetti"></div>
-    <div id="winner-bingo" class="display-class">YOU GOT BINGO!!!</div>
     <div class="heading-title">
       <h1>Capgemini Team Bingo</h1>
       <button id="randomize-button">Randomize Card</button>
     </div>
+    <div id="winner-bingo"></div>
     <div class="card">
       <div class="header-row" id="bingo-button">
         <div class="header-letter"><p>B</p></div>
