--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="row">
         <div class="cell" id="cell11"></div>
         <div class="cell" id="cell12"></div>
-        <div class="cell" id="cell13">Free Space</div>
+        <div class="cell" id="cell13"></div>
         <div class="cell" id="cell14"></div>
         <div class="cell" id="cell15"></div>
       </div>
